wip_K8S_sideinjector/KUMBIS/deployment/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: cyberark-sidecar-injector
  labels:
    app: cyberark-sidecar-injector
webhooks:
  - name: sidecar-injector.cyberark.com
    clientConfig:
      service:
        name: cyberark-sidecar-injector
        namespace: test-injectors
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRFNU1EVXhNakF5TXpZeU5Wb1hEVEk1TURVd09UQXlNell5TlZvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBS0NDCmRPbmd3NDBYeEdPUFNkTUM0azJOdWZZTGxlYWlyMUJ3UlY5WHlORUQ2Qk1yakJzVjRUSzdFZms5T2FON0xhVUIKR2dmU3k2c3QzZGZhd0lMTDV0S3BHY3RPRXlheDlOeWtxbGZMTHVlZ05OWUZ6Q2xJc3E2T1ZrTTZVeW1Wa1pFYwp6akV6Z0szR3dm [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        cyberark-sidecar-injector: enabled
